# axelrod1997

./: .gitignore  Cargo.toml  README.ja.md  README.md  pyproject.toml
analysis/: visualize.py  visualize_sweep.py
docs/: architecture.ja.md  architecture.md  cli.ja.md  cli.md  reproduction.ja.md  reproduction.md  usecases.ja.md  usecases.md  visualization.ja.md  visualization.md
simulation/: Cargo.toml
simulation/src/: lib.rs  main.rs  mechanisms.rs  metrics.rs  simulation.rs  world.rs
simulation/tests/: integration_test.rs
src/: config.rs  culture.rs  grid.rs  main.rs  metrics.rs
thoughts/ledgers/: CONTINUITY_CLAUDE-socsim-refactor.md
