[package]
name = "axelrod-culture"
version = "0.1.0"
edition = "2021"

[lib]
name = "axelrod_culture"
path = "src/lib.rs"

[[bin]]
name = "axelrod"
path = "src/main.rs"

[dependencies]
rand        = { version = "0.8", features = ["small_rng"] }
csv         = "1.3"
serde       = { version = "1.0", features = ["derive"] }
clap        = { version = "4.5", features = ["derive"] }
chrono      = "0.4"
serde_json  = "1.0"

# social-simulation framework (socsim) — グリッド ABM のエンジン基盤．
# git 依存．具体的な commit は Cargo.lock で固定される．
socsim-core   = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-core" }
socsim-engine = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-engine" }
socsim-grid   = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-grid" }
